First approach of Data Calculation
- simple equation with user input for used data
TODO:
- improve calendar use
- string input of data
- layout with text next to button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">k_tracking</string>
+    <string name="expectedData">"Expected Data Volume to be used: "</string>
+    <string name="uniMB">" MB"</string>
+    <string name="buttonCalc">Calculate Data Volume</string>
+    <string name="usedData">"Used Volume until now: "</string>
 </resources>
