added new resource for constants

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="uniMB">" MB"</string>
     <string name="buttonCalc">Calculate Data Volume</string>
     <string name="usedData">"Used Volume until now: "</string>
+    <string name="resData">"Remaining Data per Day: "</string>
 </resources>
