Added daily Average.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="buttonCalc">Calculate Data Volume</string>
     <string name="usedData">"Used Volume until now: "</string>
     <string name="resData">"Remaining Data per Day: "</string>
+    <string name="dailyAvg">"Current Daily Average: "</string>
 </resources>
