--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="usedData">"Used Volume until now: "</string>
     <string name="resData">"Remaining Data per Day: "</string>
     <string name="dailyAvg">"Current Daily Average: "</string>
+    <string name="nominalUsed">"Nominal Used Data: "</string>
 </resources>
